--- a/putninalozi/static/main.css
+++ b/putninalozi/static/main.css
@@ -13,7 +13,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .site-header .navbar-nav .nav-link {
-  color: #cbd5db;
+  color: #134461;
 }
 
 .site-header .navbar-nav .nav-link:hover {
