--- a/putninalozi/templates/register_tw.html
+++ b/putninalozi/templates/register_tw.html
@@ -221,7 +221,7 @@
                             {% endfor %}
                         </div>
                     {% else %}
-                        {{ form.together_with(class="form-control form-control-lg", placeholder="Uneti broj putnog naloga kolege koji vozi službeno vozilo") }}
+                        {{ form.together_with(class="form-select form-select-lg", placeholder="Uneti broj putnog naloga kolege koji vozi službeno vozilo") }}
                     {% endif %}
                 </div>
               </div>
@@ -323,6 +323,19 @@
                 </div>
             {% else %}
                 {{ form.costs_pays(class="form-control form-control-lg") }}
+            {% endif %}
+        </div>
+        <div class="form-box">
+          {{ form.principal_id.label(class="form-control-label") }}
+            {% if form.principal_id.errors %}
+                {{ form.principal_id(class="form-control form-control-lg is-invalid") }}
+                <div class="invalid-feedback">
+                    {% for error in form.principal_id.errors %}
+                        <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
+            {% else %}
+                {{ form.principal_id(class="form-select form-select-lg") }}
             {% endif %}
         </div>
       </fieldset>
