--- a/putninalozi/templates/travel_warrant.html
+++ b/putninalozi/templates/travel_warrant.html
@@ -535,7 +535,7 @@
         class="shadow btn btn-outline-info"
         href="{{ url_for('travel_warrants.download_file', file_name=warrant.file_name) }}"
         >Preuzmite dokument</a>
-      {% if current_user.authorization == 's_admin' or current_user.authorization == 'c_admin' %}
+      {% if current_user.authorization in ['c_principal', 's_admin', 'c_admin']  %}
       <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#DeleteModal">Obrišite putni nalog</button>
       {% endif %}
     </div>
