--- a/putninalozi/templates/travel_warrant_list.html
+++ b/putninalozi/templates/travel_warrant_list.html
@@ -117,7 +117,7 @@
       </tr>
       {% endfor %}
     </tbody>
-    {% elif current_user.authorization == 'c_admin' %}
+    {% elif current_user.authorization in ['c_admin', 'c_principal'] %}
     <thead>
       <tr id="header">
         <th>Br.</th>
@@ -128,8 +128,8 @@
       </tr>
     </thead>
     <tbody>
-      {% for warrant in warrants %} {% if current_user.user_company.id ==
-      warrant.travelwarrant_company.id %}
+      {% for warrant in warrants %} 
+      {% if current_user.user_company.id == warrant.travelwarrant_company.id %}
       <tr>
         <td class="align-middle">
           <div class="btn-group">
@@ -222,6 +222,7 @@
       order: [[0, "desc"]],
       language: {
         url: "//cdn.datatables.net/plug-ins/1.12.1/i18n/sr-SP.json",
+        stateSave: true
       },
     });
   });
