--- a/putninalozi/templates/vehicle_list.html
+++ b/putninalozi/templates/vehicle_list.html
@@ -24,7 +24,7 @@
         </tr>
       {% endfor %}
     </tbody>
-  {% elif current_user.authorization == 'c_admin' %}
+  {% elif current_user.authorization in ['c_admin', 'c_principal'] %}
     <thead>
       <tr>
         <th>Tip Vozila</th>
