--- a/putninalozi/templates/settings.html
+++ b/putninalozi/templates/settings.html
@@ -34,6 +34,19 @@
         </div>
         <br>
         <br>
+        <legend class="border-bottom mb-3">Podešavanje opcija slanja mejla:</legend>
+        <div class="form-check form-switch">
+          {{ form.send_email_kreiran(class="form-check-input") }} 
+          {{ form.send_email_kreiran.label(class="form-check-label") }}
+        </div>
+        <div class="form-check form-switch">
+          {{ form.send_email_zavrsen(class="form-check-input") }} 
+          {{ form.send_email_zavrsen.label(class="form-check-label") }}
+        </div>
+        <div class="form-check form-switch">
+          {{ form.send_email_obracunat(class="form-check-input") }} 
+          {{ form.send_email_obracunat.label(class="form-check-label") }}
+        </div>
         <legend class="border-bottom mb-3">Buduće nadogradnje softvera:</legend>
         <div class="form-check form-switch">
           <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
