ver 0.330 remove CEO, cashier from company

--- a/putninalozi/templates/company_list.html
+++ b/putninalozi/templates/company_list.html
@@ -44,7 +44,7 @@
         <a
           class="mr-2 btn btn-info"
           href="{{ url_for('companys.company_profile', company_id=company.id) }}"
-          title="Uredđivanje Kompanije"
+          title="Uređivanje Kompanije"
           >{{ company.companyname }}</a
         >
       </td>
