--- a/putninalozi/templates/vehicle_list.html
+++ b/putninalozi/templates/vehicle_list.html
@@ -17,7 +17,7 @@
     <tbody>
       {% for vehicle in vehicles %}
         <tr>
-          <td><a class="mr-2 btn btn-info" href="{{ url_for('vehicles.vehicle_profile', vehicle_id=vehicle.id) }}" title="Uredđivanje Vozila">{{ vehicle.vehicle_type }}</a></td>
+          <td><a class="mr-2 btn btn-info" href="{{ url_for('vehicles.vehicle_profile', vehicle_id=vehicle.id) }}" title="Uređivanje Vozila">{{ vehicle.vehicle_type }}</a></td>
           <td>{{ vehicle.vehicle_brand }}</td>
           <td>{{ vehicle.vehicle_registration }}</td>
           <td>{{ vehicle.vehicle_company.companyname }}</td>
@@ -36,7 +36,7 @@
       {% for vehicle in vehicles %}
         {% if vehicle.vehicle_company.id == current_user.user_company.id %}
           <tr>
-            <td><a class="mr-2 btn btn-info" href="{{ url_for('vehicles.vehicle_profile', vehicle_id=vehicle.id) }}" title="Uredđivanje Vozila">{{ vehicle.vehicle_type }}</a></td>
+            <td><a class="mr-2 btn btn-info" href="{{ url_for('vehicles.vehicle_profile', vehicle_id=vehicle.id) }}" title="Uređivanje Vozila">{{ vehicle.vehicle_type }}</a></td>
             <td>{{ vehicle.vehicle_brand }}</td>
             <td>{{ vehicle.vehicle_registration }}</td>
           </tr>
