--- a/putninalozi/templates/travel_warrant_list.html
+++ b/putninalozi/templates/travel_warrant_list.html
@@ -117,7 +117,7 @@
       </tr>
       {% endfor %}
     </tbody>
-    {% elif current_user.authorization in ['c_admin', 'c_principal'] %}
+    {% elif current_user.authorization in ['c_admin', 'c_principal', 'c_founder'] %}
     <thead>
       <tr id="header">
         <th>Br.</th>
