--- a/putninalozi/templates/user_list.html
+++ b/putninalozi/templates/user_list.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 
-{% if current_user.authorization != 'c_user' %}
+{% if current_user.authorization not in ['c_user', 'c_member'] %}
   <a class="btn btn-info btn-sm m-1" href="{{ url_for('users.register_u') }}">Registrujte novog korisnika</a>
 {% endif %}
 <hr>
