--- a/putninalozi/templates/vehicle_list.html
+++ b/putninalozi/templates/vehicle_list.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-{% if current_user.authorization != 'c_user' %}
+{% if current_user.authorization not in ['c_user', 'c_member'] %}
 <a class="btn btn-info btn-sm m-1" href="{{ url_for('vehicles.register_v') }}">Registrujte novo vozilo</a>
 {% endif %}
 <hr>
