--- a/putninalozi/templates/403.html
+++ b/putninalozi/templates/403.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
+<h1>Pristup zabranjen.</h1>
+<h2>miki, stavi privremeno bilo koju sliku, a kasnije će se uklapati u dizajn nova slika: na slici treba da bude put sa znakom stop, možda i znak koji ljudi stavljaju na kapiju gde ima pas koji čuva.</h2>
 <a class="btn btn-info" href="{{ url_for('main.home') }}">Početna</a>
 <button class="btn btn-info" onclick="history.back()">Nazad</button>
 {% endblock content%}
