--- a/putninalozi/templates/login.html
+++ b/putninalozi/templates/login.html
@@ -45,4 +45,5 @@
             </div>
           </form>
         </div>
+        <script>document.body.classList.add('login');</script>
 {% endblock content%}
