Body klasa svima

--- a/putninalozi/templates/expenses.html
+++ b/putninalozi/templates/expenses.html
@@ -171,4 +171,5 @@ selectField.addEventListener("change", function() {
 });
 
 </script>
+<script>document.body.classList.add('expenses');</script>
 {% endblock %}
