--- a/putninalozi/templates/register_c.html
+++ b/putninalozi/templates/register_c.html
@@ -165,4 +165,5 @@
         </div>
       </form>
     </div>
+    <script>document.body.classList.add('register-c');</script>
 {% endblock content%}
