--- a/putninalozi/templates/register_u.html
+++ b/putninalozi/templates/register_u.html
@@ -156,4 +156,5 @@
         </div>
       </form>
     </div>
+    <script>document.body.classList.add('register-u');</script>
 {% endblock content%}
