--- a/putninalozi/templates/about.html
+++ b/putninalozi/templates/about.html
@@ -22,4 +22,5 @@
 </div>
 
 <h2>Uz naš softver, svaki put je srećan put!</h2>
+<script>document.body.classList.add('about');</script>
 {% endblock content%}
