--- a/putninalozi/templates/login.html
+++ b/putninalozi/templates/login.html
@@ -1,10 +1,15 @@
 {% extends "layout.html" %}
 {% block content %}
-    <div class="content-section">
+
+<img src="../static/img/logo.png" class="login-logo">
+<h1>Prijava</h1>
+<p class="subtitle">Molimo unesite vaše podatke</p>
+<div class="rowinho"> 
+<div class="content-section">
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">{{legend}}</legend>
+                <!--<legend class="border-bottom mb-4">{{legend}}</legend>-->
                 <div class="form-group">
                     {{ form.email.label(class="form-control-label") }}
 
@@ -40,10 +45,11 @@
             <div class="form-group">
               {{ form.submit(class="btn btn-outline-info") }}
               <small class="text-muted ml-2">
-                <a href="{{ url_for('users.reset_request') }}">Resetovanje lozinke?</a>
+                <a href="{{ url_for('users.reset_request') }}">Resetovanje lozinke? </a>
               </small>
             </div>
           </form>
         </div>
-        <script>document.body.classList.add('login');</script>
+    </div>
+    <script>document.body.classList.add('login');</script>
 {% endblock content%}
