--- a/putninalozi/templates/reset_request.html
+++ b/putninalozi/templates/reset_request.html
@@ -25,4 +25,5 @@
             </div>
           </form>
         </div>
+        <script>document.body.classList.add('reset-request');</script>
 {% endblock content%}
