--- a/putninalozi/templates/travel_warrant_list.html
+++ b/putninalozi/templates/travel_warrant_list.html
@@ -8,12 +8,12 @@
   </fieldset>
   {% if current_user.authorization not in ['c_user', 'c_member'] %}
   <div id="accordionZero">
-    <div class="accordion" id="accordionZero">
+    <div class="accordion">
       <div class="accordion-item">
         <div class="accordion-header" id="headingZero">
           <button
             type="button"
-            class="accordion-button"
+            class="accordion-button collapsed"
             data-toggle="collapse"
             data-target="#collapseZero"
             aria-expanded="false"
@@ -56,10 +56,9 @@
                 {% else %} {{ form.start_datetime(class="form-control
                 form-control-lg", type="datetime-local") }} {% endif %}
               </div>
-            </div>
-            <br />
-            <div class="form-group">
-              {{ form.submit(class="btn btn-outline-info") }}
+              <div class="form-group">
+                {{ form.submit(class="btn btn-outline-info") }}
+              </div>
             </div>
           </div>
         </div>
