v Miki - legenda :) izmenjene legende na html

--- a/putninalozi/templates/login.html
+++ b/putninalozi/templates/login.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <img src="../static/img/logo.png" class="login-logo">
-<h1>Prijava</h1>
+<h1>{{ legend }}</h1>
 <p class="subtitle">Molimo unesite vaše podatke</p>
 <div class="rowinho"> 
 <div class="content-section">
