--- a/putninalozi/templates/travel_warrant_user.html
+++ b/putninalozi/templates/travel_warrant_user.html
@@ -13,23 +13,23 @@
           <div class="accordion-item">
             <div class="accordion-header" id="headingZero">
               <button type="button" class="accordion-button" data-toggle="collapse" data-target="#collapseZero" aria-expanded="false" aria-controls="collapseZero">
-                <h1>Broj putnog naloga: {{ warrant.travel_warrant_number }}</h1>
+                <h2>Broj putnog naloga: {{ warrant.travel_warrant_number }}</h2>
               </button>
             </div>
 
             <div id="collapseZero" class="collapse" aria-labelledby="headingZero" data-parent="#accordionZero">
               <div class="card-body">
-                <h3>{{ rod[0] }} {{ warrant.travelwarrant_user.name }} {{ warrant.travelwarrant_user.surname }} {{ rod[1] }} na poslove radnog mesta {{ warrant.travelwarrant_user.workplace }} upućuje se na službeni put dana {{warrant.start_datetime.strftime('%d.%m.%Y')}} u {{ warrant.relation }} sa zadatkom: {{ warrant.with_task }}</h3>
+                <p>{{ rod[0] }} {{ warrant.travelwarrant_user.name }} {{ warrant.travelwarrant_user.surname }} {{ rod[1] }} na poslove radnog mesta {{ warrant.travelwarrant_user.workplace }} upućuje se na službeni put dana {{warrant.start_datetime.strftime('%d.%m.%Y')}} u {{ warrant.relation }} sa zadatkom: {{ warrant.with_task }}</p>
                 <br>
-                <h3>Na službenom putu koristi prevozno sredstvo registarske tablice: {{ warrant.travelwarrant_vehicle.vehicle_registration }} {{ warrant.personal_registration }}</h3>
+                <p>Na službenom putu koristi prevozno sredstvo registarske tablice: {{ warrant.travelwarrant_vehicle.vehicle_registration }} {{ warrant.personal_registration }}</p>
                 <br>
-                <h3>Dnevnica za ovo služebno putovanje pripada u iznosu od: {{ warrant.daily_wage }} {{ warrant.daily_wage_currency }}</h3>
-                <h3>Na službenom putu će se zadržati najdalje do {{ warrant.end_datetime.strftime('%d.%m.%Y') }}, a u roku od 48h po povratku sa službenog puta i dolask na posao, podneće pismeni izveštaj o obavljenom službenom poslu. Račun o učinjenim putnim troškovima podneti u roku od tri dana</h3>
+                <p>Dnevnica za ovo služebno putovanje pripada u iznosu od: {{ warrant.daily_wage }} {{ warrant.daily_wage_currency }}</p>
+                <p>Na službenom putu će se zadržati najdalje do {{ warrant.end_datetime.strftime('%d.%m.%Y') }}, a u roku od 48h po povratku sa službenog puta i dolask na posao, podneće pismeni izveštaj o obavljenom službenom poslu. Račun o učinjenim putnim troškovima podneti u roku od tri dana</p>
                 <br>
-                <h3>Putni troškovi padaju na teret: {{ warrant.costs_pays }}</h3>
+                <p>Putni troškovi padaju na teret: {{ warrant.costs_pays }}</p>
                 <br>
                 {% if warrant.advance_payment > 0  %}
-                  <h3>Odobravam isplatu akontacije u iznosu od: {{ warrant.advance_payment }} {{ warrant.advance_payment_currency }}</h3>
+                  <p>Odobravam isplatu akontacije u iznosu od: {{ warrant.advance_payment }} {{ warrant.advance_payment_currency }}</p>
                 {% endif %}
               </div>
             </div>
