--- a/putninalozi/templates/about.html
+++ b/putninalozi/templates/about.html
@@ -1,8 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<h1>O Softveru - mihas CAR - test</h1>
-<br>
-<h3>putninalozi.online je softver koji omoguća izradu, evidenciju i štampu putnih naloga za službena putovanja u zemlji i inostranstvu. On omogućava umrežavanje korisnika koji zajednički mogu da rade na generisanju, popunjavanju i knjiženju putnih naloga. Softver je razvio Studio Implicit, firma sa bogatim iskustvom u razvoju poslovnih rešenja.</h3>
+<p class="emphasized">putninalozi.online je softver koji omoguća izradu, evidenciju i štampu putnih naloga za službena putovanja u zemlji i inostranstvu. On omogućava umrežavanje korisnika koji zajednički mogu da rade na generisanju, popunjavanju i knjiženju putnih naloga. Softver je razvio Studio Implicit, firma sa bogatim iskustvom u razvoju poslovnih rešenja.</p>
 <br>
 <div class="content-section">
   <h3>Zašto da koristite naš softver?</h3>
