--- a/putninalozi/templates/home.html
+++ b/putninalozi/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<table id="data" border="1" class="table table-striped">
+<table id="data" class="table table-striped">
   <thead>
     <tr id="header">
       <th>Modul</th>
