--- a/putninalozi/templates/layout.html
+++ b/putninalozi/templates/layout.html
@@ -60,6 +60,7 @@
     <main role="main" class="container">
       <div class="row">
         <div class="col-md-12">
+          <h1>{{ legend }}</h1>
           {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
               {% for category, message in messages %}
