--- a/putninalozi/templates/user.html
+++ b/putninalozi/templates/user.html
@@ -1,10 +1,10 @@
 {% extends "layout.html" %}
 {% block content %}
+<h1>{{ legend }}</h1>
 <div class="content-section">
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">{{ legend }}</legend>
             <div class="row">
                 <div class="col form-group">
                     {{ form.name.label(class="form-control-label") }}
